ctfd/namespace.yaml
# Namespace for CTFd
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctfd
---
