ctfd/deployment.yaml
# CTFd Deployment

# CTFd Redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ctfd-redis
  namespace: ctfd
spec:
  serviceName: ctfd-redis
  replicas: 3
  selector:
    matchLabels:
      app: ctfd-redis
  template:
    metadata:
      labels:
        app: ctfd-redis
    spec:
      containers:
      - name: ctfd-redis
        image: redis:latest
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: ctfd-redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 512Mi
---

# CTFd Redis Sentinel
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ctfd-redis-sentinel
  namespace: ctfd
spec:
  serviceName: ctfd-redis-sentinel
  replicas: 3
  selector:
    matchLabels:
      app: ctfd-redis-sentinel
  template:
    metadata:
      labels:
        app: ctfd-redis-sentinel
    spec:
      containers:
      - name: ctfd-redis-sentinel
        image: redis:latest
        command: ["redis-sentinel"]
        args: ["/etc/redis/sentinel.conf"]
        ports:
        - containerPort: 5000
          name: sentinel
        volumeMounts:
        - name: redis-config
          mountPath: /etc/redis/
        - name: data
          mountPath: /data
      volumes:
      - name: redis-config
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 256Mi

---

# CTFd Database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ctfd-db
  namespace: ctfd
spec:
  serviceName: ctfd-db
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-db
  template:
    metadata:
      labels:
        app: ctfd-db
    spec:
      containers:
        - name: ctfd-db
          image: linuxserver/mariadb:latest
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ctfd-db-config-pvc
---
